--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,13 @@
     {% endfor %}
     <a href = "/about"> About </a>
     <a href = "/surprise"> Surprise </a>
-    <a href = "/random"> Random</a>
+
     <br>
-    <a href="/result"> Population check</a>
+    <a href = "/random"> Random</a>
+    <br><br>
+    <p> Options</p>
+    <a href = "/veggie"> Vegeterian</a>
+    <a href = "/non_veggie"> Non-Vegeterian</a>
 
 {% endblock content  %}
 
